add terraform flag to enable/disable pvc protentions in harbor helm chart

--- a/modules/tools/harbor/charts/harbor-volumes/templates/pvc.yaml
+++ b/modules/tools/harbor/charts/harbor-volumes/templates/pvc.yaml
@@ -12,7 +12,9 @@ metadata:
     component: {{ $name }}
     managed-by: Terraform
   annotations:
-    helm.sh/resource-policy: keep
+    {{- if $component.protectPvcResource }}
+    helm.sh/resource-policy: "keep"
+    {{- end }}
 spec:
   accessModes:
     - ReadWriteOnce
