--- a/modules/tools/harbor/charts/harbor-volumes/values.yaml
+++ b/modules/tools/harbor/charts/harbor-volumes/values.yaml
@@ -5,8 +5,11 @@ components:
     mountPath: "/storage"
     initCommands:
       - "mkdir -p /storage/docker && chown -R 10000:10000 /storage"
+    protectPvcResource: true
   chartmuseum:
     size:
     mountPath: "/chart_storage"
     initCommands:
       - "chown -R 10000:10000 /chart_storage"
+    protectPvcResource: true
+
