upgrade eks module 13.2.1

--- a/modules/tools/k8s-spot-termination-handler/values.yaml
+++ b/modules/tools/k8s-spot-termination-handler/values.yaml
@@ -1,5 +1,5 @@
 nodeSelector:
-  kubernetes.io/lifecycle: preemptible
+  node.kubernetes.io/lifecycle: preemptible
 resources:
   limits:
     cpu: 100m
