--- a/modules/tools/harbor/charts/harbor-volumes/values.yaml
+++ b/modules/tools/harbor/charts/harbor-volumes/values.yaml
@@ -1,15 +1,21 @@
 storageClassName:
 components:
   registry:
-    size:
+    size: 2Gi
     mountPath: "/storage"
     initCommands:
       - "mkdir -p /storage/docker && chown -R 10000:10000 /storage"
     protectPvcResource: true
   chartmuseum:
-    size:
+    size: 2Gi
     mountPath: "/chart_storage"
     initCommands:
       - "chown -R 10000:10000 /chart_storage"
+    protectPvcResource: true
+  database:
+    size: 2Gi
+    mountPath: "/database"
+    initCommands:
+      - "echo \"hello\""
     protectPvcResource: true
 
