--- a/modules/tools/github-actions-runners/github-actions-runners/templates/clusterrolebinding.yaml
+++ b/modules/tools/github-actions-runners/github-actions-runners/templates/clusterrolebinding.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: actions-runner
+  name: {{ .Values.github_org }}-runners
 subjects:
   - kind: ServiceAccount
-    name: actions-runner
-    namespace: github-runners
+    name: {{ include "github-actions-runners.serviceAccountName" . }}
+    namespace: {{ .Values.namespace }}
 roleRef:
   kind: ClusterRole
-  name: actions-runner
+  name: {{ .Values.github_org }}-runners
   apiGroup: rbac.authorization.k8s.io
