--- a/modules/tools/github-actions-runners/github-actions-runners/templates/clusterrolebinding.yaml
+++ b/modules/tools/github-actions-runners/github-actions-runners/templates/clusterrolebinding.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ .Values.github_org }}-runners
+  name: {{ .Release.Name }}
 subjects:
   - kind: ServiceAccount
     name: {{ include "github-actions-runners.serviceAccountName" . }}
-    namespace: {{ .Values.namespace }}
+    namespace: {{ .Release.Namespace }}
 roleRef:
   kind: ClusterRole
-  name: {{ .Values.github_org }}-runners
+  name: {{{ .Release.Name }}
   apiGroup: rbac.authorization.k8s.io
