--- a/modules/tools/github-actions-runners/github-actions-runners/templates/horizontalrunnerautoscaler.yaml
+++ b/modules/tools/github-actions-runners/github-actions-runners/templates/horizontalrunnerautoscaler.yaml
@@ -1,10 +1,10 @@
 apiVersion: actions.summerwind.dev/v1alpha1
 kind: HorizontalRunnerAutoscaler
 metadata:
-  name: {{ .Values.github_org }}
+  name: {{ .Release.Name }}
 spec:
   scaleTargetRef:
-    name: {{ .Values.github_org }}
+    name: {{ .Release.Name }}
   minReplicas: {{ .Values.minReplicas }}
   maxReplicas: {{ .Values.maxReplicas}}
   scaleUpTriggers:
