--- a/modules/tools/github-actions-runners/github-actions-runners/templates/runnerdeployment.yaml
+++ b/modules/tools/github-actions-runners/github-actions-runners/templates/runnerdeployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: actions.summerwind.dev/v1alpha1
 kind: RunnerDeployment
 metadata:
-  name: {{ .Values.github_org }}-runners
+  name: {{ .Release.Name }}
 spec:
   replicas: {{ .Values.initialReplicas }}
   template:
