missed end block

--- a/modules/tools/github-actions-runners/github-actions-runners/templates/runnerdeployment.yaml
+++ b/modules/tools/github-actions-runners/github-actions-runners/templates/runnerdeployment.yaml
@@ -10,6 +10,7 @@ spec:
       labels:
         {{- with .Values.runner_labels -}}
         - {{ . }}
+        {{- end }}
       {{- end }}
       {{- if .Values.dockerdContainerResources -}}
       {{ toYaml .Values.dockerdContainerResources }}
