--- a/modules/tools/github-actions-runners/github-actions-runners/templates/clusterrolebinding.yaml
+++ b/modules/tools/github-actions-runners/github-actions-runners/templates/clusterrolebinding.yaml
@@ -8,5 +8,5 @@ subjects:
     namespace: {{ .Release.Namespace }}
 roleRef:
   kind: ClusterRole
-  name: {{{ .Release.Name }}
+  name: {{ .Release.Name }}
   apiGroup: rbac.authorization.k8s.io
