fix: fix github actions runners chart values
- add value to override runner image
- fix formatting for label values

--- a/modules/tools/github-actions-runners/github-actions-runners/templates/runnerdeployment.yaml
+++ b/modules/tools/github-actions-runners/github-actions-runners/templates/runnerdeployment.yaml
@@ -6,12 +6,13 @@ spec:
   replicas: {{ .Values.initialReplicas }}
   template:
     spec:
-      {{- if .Values.runner_labels -}}
-      {{ .Values.runner_labels }}
+      labels:
+        {{- toYaml .Values.labels | nindent 8 }}
+      {{- with .Values.dockerdContainerResources }}
+      dockerdContainerResources:
+        {{- toYaml . | nindent 8 }}        
       {{- end }}
-      {{- if .Values.dockerdContainerResources -}}
-      {{ toYaml .Values.dockerdContainerResources }}
-      {{- end }}
-      organization: {{ .Values.github_org }}
+      organization: {{ .Values.githubOrg }}
       serviceAccountName: {{ include "github-actions-runners.serviceAccountName" . }}
       automountServiceAccountToken: true
+      image: {{ .Values.image }}
