--- a/modules/tools/github-actions-runners/github-actions-runners/templates/clusterrole.yaml
+++ b/modules/tools/github-actions-runners/github-actions-runners/templates/clusterrole.yaml
@@ -4,5 +4,9 @@ metadata:
   name: {{ .Release.Name }}
 rules:
   - apiGroups: ["", "apps", "networking.k8s.io", "extensions", "policy"]
-    resources: ["deployments", "services", "configmaps", "secrets", "ingresses", "poddisruptionbudgets", "statefulsets", "namespaces", "serviceaccounts", "roles", "rolebindings"]
+    resources: ["deployments", "services", "configmaps", "secrets", "ingresses", "poddisruptionbudgets", "statefulsets", "namespaces", "serviceaccounts"]
     verbs: ["create", "get", "watch", "list", "patch", "update", "delete"]
+  - apiGroups: ["rbac.authorization.k8s.io"]
+    resources: ["roles", "rolebindings", "clusterroles", "clusterrolebindings"]
+    verbs: ["*"]
+  
