--- a/modules/tools/github-actions-runners/github-actions-runners/templates/runnerdeployment.yaml
+++ b/modules/tools/github-actions-runners/github-actions-runners/templates/runnerdeployment.yaml
@@ -8,6 +8,10 @@ spec:
     spec:
       labels:
         {{- toYaml .Values.labels | nindent 8 }}
+      {{- with .Values.resources }}
+      resources:
+        {{- toYaml . | nindent 8 }}        
+      {{- end }}
       {{- with .Values.dockerdContainerResources }}
       dockerdContainerResources:
         {{- toYaml . | nindent 8 }}        
