fix: add fsGroup to runner deployment

--- a/modules/tools/github-actions-runners/github-actions-runners/templates/runnerdeployment.yaml
+++ b/modules/tools/github-actions-runners/github-actions-runners/templates/runnerdeployment.yaml
@@ -18,5 +18,7 @@ spec:
       {{- end }}
       organization: {{ .Values.githubOrg }}
       serviceAccountName: {{ include "github-actions-runners.serviceAccountName" . }}
+      securityContext:
+        fsGroup: 1447
       automountServiceAccountToken: true
       image: {{ .Values.image }}
