--- a/modules/tools/github-actions-runners/github-actions-runners/templates/clusterrole.yaml
+++ b/modules/tools/github-actions-runners/github-actions-runners/templates/clusterrole.yaml
@@ -3,10 +3,19 @@ kind: ClusterRole
 metadata:
   name: {{ .Release.Name }}
 rules:
-  - apiGroups: ["", "apps", "networking.k8s.io", "extensions", "policy"]
-    resources: ["deployments", "services", "configmaps", "secrets", "ingresses", "poddisruptionbudgets", "statefulsets", "namespaces", "serviceaccounts"]
-    verbs: ["create", "get", "watch", "list", "patch", "update", "delete"]
+  - apiGroups: [""]
+    resources: ["services", "configmaps", "secrets", "namespaces", "serviceaccounts"]
+    verbs: ["*"]
+  - apiGroups: ["apps"]
+    resources: ["deployments", "statefulsets", "replicasets"]
+    verbs: ["*"]
+  - apiGroups: ["networking.k8s.io"]
+    resources: ["ingresses"]
+    verbs: ["*"]
+  - apiGroups: ["policy"]
+    resources: ["poddisruptionbudgets"]
+    verbs: ["*"]
   - apiGroups: ["rbac.authorization.k8s.io"]
     resources: ["roles", "rolebindings", "clusterroles", "clusterrolebindings"]
     verbs: ["*"]
-  
+
