--- a/modules/tools/github-actions-runners/github-actions-runners/templates/clusterrole.yaml
+++ b/modules/tools/github-actions-runners/github-actions-runners/templates/clusterrole.yaml
@@ -18,4 +18,6 @@ rules:
   - apiGroups: ["rbac.authorization.k8s.io"]
     resources: ["roles", "rolebindings", "clusterroles", "clusterrolebindings"]
     verbs: ["*"]
-
+  - apiGroups: ["batch"]
+    resources: ["jobs"]
+    verbs: ["*"]
