allow github actions runners to manage extensions.ingress, batch.jobs (#467)
* allow github actions runners to create ingresses in "extensions" api group

* allow jobs too

--- a/modules/tools/github-actions-runners/github-actions-runners/templates/clusterrole.yaml
+++ b/modules/tools/github-actions-runners/github-actions-runners/templates/clusterrole.yaml
@@ -9,7 +9,7 @@ rules:
   - apiGroups: ["apps"]
     resources: ["deployments", "statefulsets", "replicasets"]
     verbs: ["*"]
-  - apiGroups: ["networking.k8s.io"]
+  - apiGroups: ["networking.k8s.io", "extensions"]
     resources: ["ingresses"]
     verbs: ["*"]
   - apiGroups: ["policy"]
@@ -18,4 +18,6 @@ rules:
   - apiGroups: ["rbac.authorization.k8s.io"]
     resources: ["roles", "rolebindings", "clusterroles", "clusterrolebindings"]
     verbs: ["*"]
-
+  - apiGroups: ["batch"]
+    resources: ["jobs"]
+    verbs: ["*"]
