--- a/modules/tools/github-actions-runners/github-actions-runners/templates/clusterrole.yaml
+++ b/modules/tools/github-actions-runners/github-actions-runners/templates/clusterrole.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ .Release.Name }}
 rules:
   - apiGroups: [""]
-    resources: ["services", "configmaps", "secrets", "namespaces", "serviceaccounts"]
+    resources: ["services", "configmaps", "secrets", "namespaces", "serviceaccounts", "persistentvolumeclaims"]
     verbs: ["*"]
   - apiGroups: ["apps"]
     resources: ["deployments", "statefulsets", "replicasets"]
