--- a/modules/tools/github-actions-runners/github-actions-runners/templates/horizontalrunnerautoscaler.yaml
+++ b/modules/tools/github-actions-runners/github-actions-runners/templates/horizontalrunnerautoscaler.yaml
@@ -15,8 +15,8 @@ spec:
       amount: {{ .Values.scaleAmount }}
       duration: {{ .Values.scaleDuration }}
   metrics:
-  - type: PercentageRunnersBusy
-    scaleUpThreshold: '0.75'    # The percentage of busy runners at which the number of desired runners are re-evaluated to scale up
-    scaleDownThreshold: '0.3'   # The percentage of busy runners at which the number of desired runners are re-evaluated to scale down
-    ScaleUpAdjustment: '2'      # The scale up runner count added to desired count
-    ScaleDownAdjustment: '1'    # The scale down runner count subtracted from the desired count  
+    - type: PercentageRunnersBusy
+      scaleUpThreshold: '0.75'    # The percentage of busy runners at which the number of desired runners are re-evaluated to scale up
+      scaleDownThreshold: '0.3'   # The percentage of busy runners at which the number of desired runners are re-evaluated to scale down
+      scaleUpAdjustment: '2'      # The scale up runner count added to desired count
+      scaleDownAdjustment: '1'    # The scale down runner count subtracted from the desired count  
