fix: move autoscale arguments to runner module

--- a/modules/tools/github-actions-runners/github-actions-runners/templates/horizontalrunnerautoscaler.yaml
+++ b/modules/tools/github-actions-runners/github-actions-runners/templates/horizontalrunnerautoscaler.yaml
@@ -5,18 +5,18 @@ metadata:
 spec:
   scaleTargetRef:
     name: {{ .Release.Name }}
-  minReplicas: {{ .Values.minReplicas }}
-  maxReplicas: {{ .Values.maxReplicas}}
+  minReplicas: {{ .Values.horizontalRunnerAutoscaler.minReplicas }}
+  maxReplicas: {{ .Values.horizontalRunnerAutoscaler.maxReplicas }}
   scaleUpTriggers:
     - githubEvent:
         checkRun:
           types: [ "created" ]
           status: "queued"
-      amount: {{ .Values.scaleAmount }}
-      duration: {{ .Values.scaleDuration }}
+      amount: {{ .Values.horizontalRunnerAutoscaler.scaleAmount }}
+      duration: {{ .Values.horizontalRunnerAutoscaler.scaleDuration }}
   metrics:
     - type: PercentageRunnersBusy
       scaleUpThreshold: '0.75'    # The percentage of busy runners at which the number of desired runners are re-evaluated to scale up
       scaleDownThreshold: '0.3'   # The percentage of busy runners at which the number of desired runners are re-evaluated to scale down
-      scaleUpAdjustment: 2      # The scale up runner count added to desired count
-      scaleDownAdjustment: 1    # The scale down runner count subtracted from the desired count  
+      scaleUpAdjustment: {{ .Values.horizontalRunnerAutoscaler.scaleAmount }}
+      scaleDownAdjustment: {{ .Values.horizontalRunnerAutoscaler.scaleAmount }}
