--- a/modules/tools/github-actions-runners/github-actions-runners/values.yaml
+++ b/modules/tools/github-actions-runners/github-actions-runners/values.yaml
@@ -1,11 +1,13 @@
 initialReplicas: 0
-minReplicas: 0
-maxReplicas: 3
-scaleAmount: 1
-scaleDuration: "10m"
 githubOrg: 
 labels: []
 image:
+
+horizontalRunnerAutoscaler:
+  minReplicas: 0
+  maxReplicas: 10
+  scaleAmount: 1
+  scaleDuration: "5m"
 
 resources: {}
 
