--- a/modules/tools/github-actions-runners/github-actions-runners/templates/horizontalrunnerautoscaler.yaml
+++ b/modules/tools/github-actions-runners/github-actions-runners/templates/horizontalrunnerautoscaler.yaml
@@ -7,13 +7,13 @@ spec:
     name: {{ .Release.Name }}
   minReplicas: {{ .Values.horizontalRunnerAutoscaler.minReplicas }}
   maxReplicas: {{ .Values.horizontalRunnerAutoscaler.maxReplicas }}
-  scaleUpTriggers:
-    - githubEvent:
-        checkRun:
-          types: [ "created" ]
-          status: "queued"
-      amount: {{ .Values.horizontalRunnerAutoscaler.scaleAmount }}
-      duration: {{ .Values.horizontalRunnerAutoscaler.scaleDuration }}
+  # scaleUpTriggers:
+  #   - githubEvent:
+  #       checkRun:
+  #         types: [ "created" ]
+  #         status: "queued"
+  #     amount: {{ .Values.horizontalRunnerAutoscaler.scaleAmount }}
+  #     duration: {{ .Values.horizontalRunnerAutoscaler.scaleDuration }}
   metrics:
     - type: PercentageRunnersBusy
       scaleUpThreshold: '0.75'    # The percentage of busy runners at which the number of desired runners are re-evaluated to scale up
