--- a/modules/tools/harbor/charts/harbor-volumes/templates/pvc.yaml
+++ b/modules/tools/harbor/charts/harbor-volumes/templates/pvc.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: harbor-{{ $name }}
-  namespace: toolchain
+  namespace: {{ $.Release.Namespace }}
   finalizers:
     - kubernetes.io/pvc-protection
   labels:
