[eng-2087] update eks cluster to use managed node groups (#506)

--- a/modules/tools/aws-node-termination-handler/values.yaml
+++ b/modules/tools/aws-node-termination-handler/values.yaml
@@ -1,2 +1,10 @@
 nodeSelector:
-  node.kubernetes.io/lifecycle: preemptible
+  node.liatr.io/lifecycle: preemptible
+
+resources:
+  requests:
+    memory: "32Mi"
+    cpu: "10m"
+  limits:
+    memory: "64Mi"
+    cpu: "50m"
