--- a/.github/workflows/terraform-validate.yml
+++ b/.github/workflows/terraform-validate.yml
@@ -32,7 +32,7 @@ jobs:
           github_token: ${{ secrets.github_token }}
           fail_on_error: "true"
           filter_mode: "nofilter"
-          tfsec_flags: "-e general-secrets-sensitive-in-variable,general-secrets-sensitive-in-local,"
+          tfsec_flags: "-e general-secrets-sensitive-in-variable,general-secrets-sensitive-in-local,general-secrets-sensitive-in-attribute"
 
       - name: Run tflint with reviewdog
         uses: reviewdog/action-tflint@v1.13.0
