--- a/.github/workflows/terraform-validate.yml
+++ b/.github/workflows/terraform-validate.yml
@@ -21,10 +21,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1
-
       # here we create the json, we need the "id:" so we can use it in "outputs" below
       - id: set-matrix
         env:
@@ -34,9 +30,11 @@ jobs:
     outputs:
         matrix: ${{ steps.set-matrix.outputs.matrix }}
 
-  # phase 2, use it in a matrix
-  terraform_format:
-    name: "Terraform Format and Validation"
+
+
+# phase 2, use it in a matrix
+  terraform_validate:
+    name: "Terraform Validation"
     runs-on: ubuntu-latest
     # this means, wait for the "provide_stages_json" phase 1 to finish
     needs: provide_stages_json
@@ -57,15 +55,33 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
 
-      # Checks that all Terraform configuration files adhere to a canonical format
-      - name: Terraform Format
-        run: terraform fmt -check -recursive
-
       # Checks that all Terraform configuration is syntactically valid and internally consistent, regardless of any provided variables or existing state. 
       - name: Terraform Validate
         env:
           FOLDER: ${{ matrix.validate }}
         run: cd $FOLDER && terraform init -backend=false && terraform validate
+
+
+
+  terraform_format:
+    name: "Terraform Format"
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+
+    steps:
+      # Checkout the repository to the GitHub Actions runner
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+
+      # Checks that all Terraform configuration files adhere to a canonical format
+      - name: Terraform Format
+        run: terraform fmt -check -recursive
 
       - name: Run tfsec with reviewdog
         uses: reviewdog/action-tfsec@v1.11.0
