--- a/.github/workflows/terraform-validate.yml
+++ b/.github/workflows/terraform-validate.yml
@@ -9,13 +9,13 @@ jobs:
   # phase 1
   discover_stages:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        stages:
-        - stages/apps
-        - stages/cloud-provider
-        - stages/config
-        - stages/vault
+    # strategy:
+    #   matrix:
+    #     stages:
+    #     - stages/apps
+    #     - stages/cloud-provider
+    #     - stages/config
+    #     - stages/vault
     steps:
       # Checkout the repository to the GitHub Actions runner
       - name: Checkout
@@ -23,9 +23,9 @@ jobs:
 
       # here we create the json, we need the "id:" so we can use it in "outputs" below
       - id: set-matrix
-        env:
-          STAGE: ${{ matrix.stages }}
-        run: echo "::set-output name=matrix::$(find $STAGE -name main.tf | sed 's:[^/]*$::' | jq -R -s -c 'split("\n")' | jq -c 'map(select(length > 0))' )"
+        # env:
+        #   STAGE: ${{ matrix.stages }}
+        run: echo "::set-output name=matrix::$(find stages -name main.tf | sed 's:[^/]*$::' | jq -R -s -c 'split("\n")' | jq -c 'map(select(length > 0))' )"
         #run: echo "::set-output name=matrix::[\"stages/apps/sharedsvc/\",\"stages/apps/azure-example/\",\"stages/apps/lead/\"]"
         #run: echo "::set-output name=matrix::[\"stages/apps/sharedsvc/\",\"stages/apps/azure-example/\",\"stages/apps/lead/\"]"
     # here, we save the result of this 1st phase to the "outputs"
