--- a/.github/workflows/terraform-validate.yml
+++ b/.github/workflows/terraform-validate.yml
@@ -17,8 +17,8 @@ jobs:
 
       # here we create the json, we need the "id:" so we can use it in "outputs" below
       - id: set-matrix
-        # env:
-        #   STAGE: ${{ matrix.stages }}
+
+        # find main.tf files in stages folder, trim to path, store as array, remove any empty.
         run: echo "::set-output name=matrix::$(find stages -name main.tf | sed 's:[^/]*$::' | jq -R -s -c 'split("\n")' | jq -c 'map(select(length > 0))' )"
         #run: echo "::set-output name=matrix::[\"stages/apps/sharedsvc/\",\"stages/apps/azure-example/\",\"stages/apps/lead/\"]"
 
