Run release workflow when config changes

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,8 @@ on:
       - 'modules/**'
       - 'stacks/**'
       - 'stages/**'
+      - '.releaserc.yaml'
+      - '.github/workflows/release.yml'
   workflow_dispatch:
 
 jobs:
