--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,9 @@ on:
       - '.github/workflows/release.yml'
   workflow_dispatch:
 
+concurrency:
+  group: release
+
 jobs:
   release:
     runs-on: ubuntu-latest
