--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,9 +40,9 @@ jobs:
 
       - name: Setup Terragrunt
         run: |
-          curl -f -Lo terragrunt https://github.com/gruntwork-io/terragrunt/releases/download/${{env.TERRAGRUNT_VERSION}}/terragrunt_linux_amd64 && \
-          chmod +x ./terragrunt
-          mv ./terragrunt /usr/local/bin
+          curl -L0 https://github.com/gruntwork-io/terragrunt/releases/download/${{env.TERRAGRUNT_VERSION}}/terragrunt_linux_amd64 && \
+          chmod +x ./terragrunt_linux_amd64
+          mv ./terragrunt_linux_amd64 /usr/local/bin/terragrunt
           terragrunt --version
 
       - name: Get Branch Name
