--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,8 @@ env:
 
 jobs:
 
-  create_vcluster:
-    name: Create vcluster
+  test:
+    name: Test
     runs-on: [self-hosted, liatrio-lead-terraform]
     steps:
       - name: Checkout lead-environments
@@ -49,6 +49,10 @@ jobs:
         id: branch
         uses: tj-actions/branch-names@v5
 
+      - name: Get vcluster Name
+        id: vcluster-name
+        run: echo "::set-output name=name::${{ steps.branch.outputs.head_ref_branch }}-vcluster"
+
       - name: Download vcluster CLI
         run: |
           curl -LO https://github.com/loft-sh/vcluster/releases/download/v${{env.VCLUSTER_VERSION}}/vcluster-linux-amd64
@@ -58,7 +62,7 @@ jobs:
 
       - name: Create vcluster
         env:
-          VCLUSTER_NAME: ${{ steps.branch.outputs.head_ref_branch }}
+          VCLUSTER_NAME: ${{ steps.vcluster-name.outputs.name }}
           TERRAGRUNT_IAM_ROLE: ${{ secrets.AWS_LEAD_TERRAFORM_TEST_ROLE }}
         run: |
           cd lead-environments/aws/vcluster
