--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,11 @@ jobs:
           unzip awscliv2.zip
           sudo ./aws/install
 
+      - name: Setup Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: '1.17'
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
