--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,11 @@ jobs:
           path: lead-environments
           token: ${{ secrets.LIATRIO_JENKINS_PAT }}
 
+      - name: Checkout lead-terraform
+        uses: actions/checkout@v2
+        with:
+          path: lead-terraform
+
       # aws cli is needed for authenticating to an EKS cluster via terraform
       - name: Install AWS CLI
         run: |
@@ -69,11 +74,12 @@ jobs:
         env:
           VCLUSTER_NAME: ${{ steps.vcluster-name.outputs.name }}
           TERRAGRUNT_IAM_ROLE: ${{ secrets.AWS_LEAD_TERRAFORM_TEST_ROLE }}
-        run: |
-          cd lead-environments/aws/vcluster
-          terragrunt apply -auto-approve
+        run: terragrunt apply --terragrunt-working-dir ./lead-environments/aws/vcluster -auto-approve
 
       - name: Run Tests
+        env:
+          VCLUSTER_NAME: ${{ steps.vcluster-name.outputs.name }}
+          TERRAGRUNT_IAM_ROLE: ${{ secrets.AWS_LEAD_TERRAFORM_TEST_ROLE }}
         run: |
           aws sts assume-role --role-arn ${{ secrets.AWS_LEAD_TERRAFORM_TEST_ROLE }} --role-session-name ${{ steps.branch.outputs.head_ref_branch }}-test >> role.json
           export AWS_ACCESS_KEY_ID=$(cat role.json | jq -rc .Credentials.AccessKeyId)
@@ -82,5 +88,12 @@ jobs:
 
           aws eks update-kubeconfig --name lead --region us-east-1
 
+          terragrunt output --terragrunt-working-dir ./lead-environments/aws/vcluster -json >> outputs.json
+          export OIDC_PROVIDER_ARN=$(cat outputs.json | jq -rc .aws_iam_openid_connect_provider_arn.value)
+          export OIDC_PROVIDER_URL=$(cat outputs.json | jq -rc .aws_iam_openid_connect_provider_url.value)
+
           vcluster connect vcluster --namespace ${{ steps.vcluster-name.outputs.name }} --server https://${{ steps.vcluster-name.outputs.name }}.toolchain.lead.sandbox.liatr.io
           export KUBECONFIG=$(pwd)/kubeconfig.yaml
+
+          cd lead-terraform
+          go test -v ./modules/./...
